k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valodiscordhub
  labels:
    name: valodiscordhub
    environment: production
